--- a/.gitattributes
+++ b/.gitattributes
@@ -9,7 +9,7 @@
 *.hpp text
 *.l text
 *.y text
-*.liq text
+*.owo text
 
 # Declare files that will always have CRLF line endings on checkout.
 *.sln text eol=crlf
